[package]
name = "bel-format"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "A POC parser for the Biological Expression Language (BEL) format."
categories = ["science", "simulation", "parser-implementations"]
keywords = ["bel", "biology"]
homepage = "https://github.com/colbyn/sysbio"
repository = "https://github.com/colbyn/sysbio"
license = "MIT"

[dependencies]
nom = "6.0.1"
